fix the kids section design on mobiles

--- a/src/styles/components/TreatmentSection.scss
+++ b/src/styles/components/TreatmentSection.scss
@@ -186,6 +186,7 @@
         width: 100%;
         margin-bottom: 0px;
         display: flex;
+        font-family: "Merri-sans";
       }
       .tratment-right-txt {
         width: 100%;
@@ -265,7 +266,7 @@
     }
     .aligner-teen {
       width: 100%;
-      height: 50%;
+      height: 225px;
       background-size: cover;
       background-position: 0% 50%;
       transition: all 0.5s ease;
@@ -275,8 +276,8 @@
     }
     .feste {
       width: 100%;
-      height: 45%;
-      background-position: 50% 90%;
+      height: 225px;
+      background-position: bottom;
       background-size: cover;
       transition: all 0.5s ease;
 
@@ -286,7 +287,7 @@
     }
     .herausnehmbare {
       width: 100%;
-      height: 50%;
+      height: 300px;
       background-position: 100% 50%;
       background-size: cover;
       transition: all 0.5s ease;
@@ -297,7 +298,7 @@
     }
     .frühbehandlung {
       width: 100%;
-      height: 50%;
+      height: 250px;
       background-position: center;
       background-size: cover;
       transition: all 0.5s ease;
@@ -308,7 +309,7 @@
     }
     .skelettale {
       width: 100%;
-      height: 50%;
+      height: 225px;
       background-position: bottom;
       background-size: cover;
       transition: all 0.5s ease;
@@ -319,7 +320,7 @@
     }
     .retainer {
       width: 100%;
-      height: 50%;
+      height: 250px;
       background-position: center;
       background-size: cover;
       transition: all 0.5s ease;
