--- a/src/styles/pages/leistungen/Kids.scss
+++ b/src/styles/pages/leistungen/Kids.scss
@@ -45,7 +45,7 @@
       margin-bottom: 34px;
     }
     .kids-treatment-container {
-      height: calc(100lvh - 160px);
+      height: 100%;
     }
     .kids-eight-container {
       height: calc(125vh - 60px);
